--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite preview",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.webp",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-ios-time-picker": "^0.2.2",
     "react-otp-input": "^3.1.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
+    "smtp-client": "^0.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
