--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
-    "smtp-client": "^0.4.0"
+    "smtp-client": "^0.4.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
