--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
+    "react-zoom-pan-pinch": "^3.6.1",
     "smtp-client": "^0.4.0",
     "swiper": "^11.1.14"
   },
