--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
