--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
     "rewrites":  [
       {"source": "/(.*)", "destination": "/"}
+    ],
+    "routes": [
+      {
+        "src": "/firebase-messaging-sw.js",
+        "headers": {
+          "Cache-Control": "public, max-age=31536000, immutable",
+          "Content-Type": "application/javascript"
+        },
+        "dest": "/firebase-messaging-sw.js"
+      }
     ]
   }
