--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,19 @@
     "rewrites":  [
       {"source": "/(.*)", "destination": "/"}
     ],
-    "routes": [
+    "headers": [
       {
-        "src": "/firebase-messaging-sw.js",
-        "headers": {
-          "Cache-Control": "public, max-age=31536000, immutable",
-          "Content-Type": "application/javascript"
-        },
-        "dest": "/firebase-messaging-sw.js"
+        "source": "/firebase-messaging-sw.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          },
+          {
+            "key": "Content-Type",
+            "value": "application/javascript"
+          }
+        ]
       }
     ]
   }
