--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^4.4.1",
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
+    "global": "^4.4.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -24,6 +25,7 @@
     "react-ios-time-picker": "^0.2.2",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.27.0",
+    "react-simple-images-zoom": "^1.0.6",
     "react-toastify": "^10.0.6",
     "react-zoom-pan-pinch": "^3.6.1",
     "smtp-client": "^0.4.0",
