--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.27.0",
     "react-simple-images-zoom": "^1.0.6",
     "react-toastify": "^10.0.6",
+    "react-viewerjs": "^0.1.9",
     "react-zoom-pan-pinch": "^3.6.1",
     "smtp-client": "^0.4.0",
     "swiper": "^11.1.14"
