--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-ios-time-picker": "^0.2.2",
     "react-otp-input": "^3.1.1",
+    "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.27.0",
     "react-simple-images-zoom": "^1.0.6",
     "react-toastify": "^10.0.6",
