--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codesyntax/ionic-react-photo-viewer": "^1.14.0",
     "@emailjs/browser": "^4.4.1",
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
@@ -24,11 +25,8 @@
     "react-icons": "^5.3.0",
     "react-ios-time-picker": "^0.2.2",
     "react-otp-input": "^3.1.1",
-    "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.27.0",
-    "react-simple-images-zoom": "^1.0.6",
     "react-toastify": "^10.0.6",
-    "react-viewerjs": "^0.1.9",
     "react-zoom-pan-pinch": "^3.6.1",
     "smtp-client": "^0.4.0",
     "swiper": "^11.1.14"
